# GetModuleRely

./: .gitignore  README.md  pyproject.toml
getmodulerely/: __main__.py
